--- a/src/app/components/v2/dashboard-discover-card/dashboard-discover-card.component.html
+++ b/src/app/components/v2/dashboard-discover-card/dashboard-discover-card.component.html
@@ -29,7 +29,7 @@
 
             <ion-card-content>
                 <ion-nav-link router-direction="forward" [component]="recipieComponent">
-                    Delicious & healthy homemade recipes for a balanced, nutritious lifestyle.
+                    Delicious homemade recipes for a balanced, nutritious lifestyle.
                 </ion-nav-link>
             </ion-card-content>
         </ion-card>
