--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-*{
+* {
     font-family: 'Metropolis-Regular', "Segoe UI", Helvetica Neue, Helvetica, sans-serif !important;
 }
 
@@ -138,7 +138,7 @@
 
 .calorie-info {
     text-align: center;
-    margin: 20px;
+    margin: 0.1em;
 }
 
 .welcome-img {
@@ -146,16 +146,18 @@
 }
 
 .calorie-section {
-    margin-top: 20px;
+    margin: 15px 0;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .calorie-value {
-    display: block;
-    font-size: 1.5rem;
-    color: #68ff6e;
     font-weight: bold;
+    color: #68ff6e;
+    font-size: 20px;
 }
-
 
 .requires {
     font-size: large;
@@ -179,7 +181,7 @@
 
     .full-width-dialog {
         width: fit-content !important;
-        margin: 2em;
+        margin: 1em;
     }
 
     .spinner {
