--- a/src/app/components/v2/dashboard-discover-card/discover-recipies/discover-recipies.component.scss
+++ b/src/app/components/v2/dashboard-discover-card/discover-recipies/discover-recipies.component.scss
@@ -41,3 +41,15 @@ ion-card {
     height: 100%;
     border: none;
   }
+
+  .meal-label {
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+}
+
+.meta-text {
+    font-size: 12px;
+    color: #666;
+    margin-top: 2px;
+}
