--- a/src/app/components/v2/dashboard-discover-card/discover-workouts/discover-workouts.component.scss
+++ b/src/app/components/v2/dashboard-discover-card/discover-workouts/discover-workouts.component.scss
@@ -30,3 +30,15 @@ ion-card {
     text-align: center;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
+
+.meal-label {
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+}
+
+.meta-text {
+    font-size: 12px;
+    color: #666;
+    margin-top: 2px;
+}
