--- a/src/app/components/v2/dashboard-micronutrients-card/dashboard-micronutrients-card.component.html
+++ b/src/app/components/v2/dashboard-micronutrients-card/dashboard-micronutrients-card.component.html
@@ -48,14 +48,51 @@
         </ion-card>
     </ion-col>
     <ion-col>
-        <ion-card class="water-card">
+        <ion-card class="water-card" id="open-modal">
             <ion-card-header>
                 <ion-card-title>Water</ion-card-title>
-                <ion-card-subtitle>Consumed: {{getWaterIntake()}}</ion-card-subtitle>
+                <ion-card-subtitle>{{getWaterIntake()}} / 4000ml</ion-card-subtitle>
             </ion-card-header>
 
             <ion-card-content>
-                <ion-progress-bar [value]="getWaterIntake()" buffer=".5"></ion-progress-bar> </ion-card-content>
+                <ion-progress-bar [value]="getWaterProgress()" buffer=".5"></ion-progress-bar> </ion-card-content>
         </ion-card>
     </ion-col>
 </ion-row>
+
+<ion-modal #modal trigger="open-modal" [initialBreakpoint]="0.5" [breakpoints]="[0, 0.25, 0.5, 0.75]"
+    handleBehavior="cycle">
+    <ng-template>
+        <ion-content style="--background: linear-gradient(171deg, #3eacfa 0%, rgba(255, 255, 255, 1) 100%)">
+            <ion-toolbar style="--background: #3eacfa;">
+                <ion-title>Sip & Track</ion-title>
+                <ion-buttons slot="end">
+                    <ion-button color="light" (click)="modal.dismiss()">Close</ion-button>
+                </ion-buttons>
+            </ion-toolbar>
+
+            <ion-grid>
+                <ion-row class="full-height">
+                    <ion-col size="3" class="button-col">
+                        <ion-button expand="full" color="danger" (click)="decreaseWater()">
+                            <ion-icon name="remove-circle"></ion-icon>
+                        </ion-button>
+                    </ion-col>
+
+                    <ion-col size="6" class="center-col" style="text-align: center;">
+                        <div class="progress">
+                            <div class="progress-bar" [style.height.%]="waterIntakeVal"></div>
+                        </div>
+                        <p style="font-size: 1.2rem; color: white;">{{waterIntake}} / 4000 ml</p>
+                    </ion-col>
+
+                    <ion-col size="3" class="button-col">
+                        <ion-button expand="full" color="primary" (click)="increaseWater()">
+                            <ion-icon name="add-circle"></ion-icon>
+                        </ion-button>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </ion-content>
+    </ng-template>
+</ion-modal>
